Change setup file

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,15 +3,15 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = rentomatic
+name = rent
 description = A demo implementation of a clean architecture in Python.
-author = Leonardo Giordani
-author-email = giordani.leonardo@gmail.com
+author = BSM
+author-email = malachieborohoul@gmail.com
 version = 1.0.0
 license = mit
 long-description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pycabook/rentomatic
+url = https://github.com/malachieborohoul/Rent-Clean-Architecture
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
